# remogui

./: .gitignore  CMakeLists.txt  README  image.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui  remo_gui.json  remo_gui.pro  remo_gui.pro.user.a56f410
json/: remo_gui.json
proto/: AlgoParam.proto  test.proto
remoprotocol/: CfgVar.hpp  MutexWrap.cpp  Protocol.cpp  shareddata.cpp  systemusrlib.h
resource/: image.qrc
src/: AlgorithmProtoTest.cpp  AlgorithmProtoTest.h  CameraImageWidget.cpp  CameraImageWidget.h  MainImageWidget.cpp  MainImageWidget.h  MainWorkSpaceWidget.cpp  MainWorkSpaceWidget.h  MediaStreamProc.cpp  MediaStreamProc.h  aemodedialog.cpp  aemodedialog.h  algorithmprotodef.h  batteryinfo.cpp  batteryinfo.h  camerafielddef.h  camerasetting.cpp  camerasetting.h  cameraworkmode.cpp  cameraworkmode.h  cmddef.h  cmdsender.cpp  cmdsender.h  deviceinfo.cpp  deviceinfo.h  deviceinfodialog.cpp  deviceinfodialog.h  focus.h.autosave  focusdialog.cpp  focusdialog.h  gimbaldialog.cpp  gimbaldialog.h  imagestreamproc.cpp  imagestreamproc.h  imagewidget.cpp  imagewidget.h  itemdatadef.cpp  itemdatadef.h  main.cpp  mainwindow.cpp  (+22 more)
src/algorithm/: AlgorithmDialog.cpp  AlgorithmDialog.cpp.backup  AlgorithmDialog.cpp.bp  AlgorithmDialog.h  AlgorithmDialog.h.backup  AlgorithmDialog.h.bp  AlgorithmGimbalDialog.cpp  AlgorithmGimbalDialog.h  AlgorithmImageWidget.cpp  AlgorithmImageWidget.h  AlgorithmManager.cpp  AlgorithmManager.h  AlgorithmPkt.cpp  AlgorithmPkt.h  AlgorithmTcpMsgClient.cpp  AlgorithmTcpMsgClient.h  AlgorithmZoomSlider.cpp  AlgorithmZoomSlider.h  FaceTemplateDialog.cpp  FaceTemplateDialog.h  FaceTemplateItem.cpp  FaceTemplateItem.h  NetImage.cpp  NetImage.hpp  TcpMsgProxy.cpp  TcpMsgProxy.h  WorkSpaceWidget.cpp  WorkSpaceWidget.h
src/mediaview/: HttpProxy.cpp  HttpProxy.h  ProgressBarSlider.cpp  ProgressBarSlider.h  VideoStreamControl.cpp  VideoStreamControl.h  WaterFallImageItem.cpp  WaterFallImageItem.h  WaterFallVideoItem.cpp  WaterFallVideoItem.h  waterfallitem.cpp  waterfallitem.h  waterfallscrollarea.cpp  waterfallscrollarea.h  waterfallwidget.cpp  waterfallwidget.h
ui/: aemode.ui  algorithm.ui  algorithmgimbal.ui  algorithmprototest.ui  deviceinfo.ui  dialog.ui  facetemplate.ui  focus.ui  gimbal.ui  mainwindow.ui  photoandvideo.ui  thumbnailviewer.ui  workmode.ui
